--- a/src/App.css
+++ b/src/App.css
@@ -24,13 +24,11 @@
   
   /* FIXED HERO SECTION - Proper Mobile Height */
   .hero {
-    padding-left: 100%;
+    padding-left: 0;
     height: 90vh;
     height: 90dvh;
     padding: 0 1rem;
     position: relative;
-    min-height: 100%;
-    max-height: 100%;
   }
   
   .hero-3d-container {
@@ -487,6 +485,7 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
